--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.8.22"
 dirs = "4.0.0"
 zip = "0.6.2"
+
+tracing = "0.1"
+tracing-subscriber = "0.3"
